@@ -29,6 +29,7 @@ no_index:
 requires:
   Mo: 0
   Mo::utils: 0.21
+  Mo::utils::Array: 0
   Mo::utils::Email: 0
   Mo::utils::Number: 0
   perl: 5.8.0
