@@ -83,16 +83,18 @@ METHODS
 
 ERRORS
      new():
-             From Mo::utils::check_array_object():
+             From Mo::utils::Array::check_array_object():
                      Parameter 'external_ids' must be a array.
                              Value: %s
                              Reference: %s
-                     External id isn't 'Data::ExternalId' object.
+                     Parameter 'external_ids' with array must contain 'Data::ExternalId' objects.
                              Value: %s
                              Reference: %s
+
              From Mo::utils::Number::check_positive_natural():
                      Parameter 'id' must a positive natural number.
                              Value: %s
+
              Parameter 'name' has length greater than '255'.
                      Value: %s
              Parameter 'sex' must be one of defined strings.
@@ -138,7 +140,8 @@ EXAMPLE
      # External id - Wikidata: Q27954834
 
 DEPENDENCIES
-    Mo, Mo::utils, Mo::utils::Email, Mo::utils::Number, Readonly.
+    Mo, Mo::utils, Mo::utils::Array, Mo::utils::Email, Mo::utils::Number,
+    Readonly.
 
 REPOSITORY
     <https://github.com/michal-josef-spacek/Data-Person>
