@@ -1,4 +1,5 @@
 0.06
+ - Move check_array_object() to Mo::utils::Array.
 
 0.05 2025-04-26T13:56:39+02:00
  - Add DESCRIPTION section to doc.
